--- a/MyLove/index.html
+++ b/MyLove/index.html
@@ -26,8 +26,8 @@
 			<span class="space"><span class="comments">*1994—02-14,</span><br>
 			<span class="space"><span class="comments">*1993-10-30.</span><br>
 			<span class="space"><span class="comments">*/</span><br>
-			Boy name = <span class="keyword">Mr</span> Li<br>
-			Girl name = <span class="keyword">Mrs</span> Tian<br>
+			Boy name = <span class="keyword">Mr</span> 某某<br>
+			Girl name = <span class="keyword">Mrs</span> 某某<br>
 			<span class="comments">// Fall in love river. </span><br>
 			If I were to fall in love<br>
 			<span class="comments">//　我爱你，不是因为你是一个怎样的人.</span><br>
@@ -60,7 +60,7 @@
 					爱你直到永永远远。<br/>
 					点击>>
                     <a href="index2.html"  style="text-decoration:none">执子之手，与子偕老</a>
-					<div class="signature">- WANG</div>
+					<div class="signature">- 某某</div>
 				</div>
 			</div>
 		</div>
