--- a/MyLove/index4.htm
+++ b/MyLove/index4.htm
@@ -20,7 +20,7 @@
 	<meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<meta name="author" content="情人节,表白程序,情人节表白程序,自动生成表白程序,自动表白程序">
 	<meta name="description" content="这是一个自动生成表白页面的程序，模版由jianghongfei.com.cn原创，麦葱(www.yuxiaoxi.com)做二次开发，仅限娱乐，不得用于商业用途">
-	<title>情人节自动生成表白程序</title>
+	<title>我们的故事</title>
 	<link rel="stylesheet" href="all.min.css" >
 </head>
 <body>
