--- a/MyLove/index4.htm
+++ b/MyLove/index4.htm
@@ -19,7 +19,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<meta name="author" content="情人节,表白程序,情人节表白程序,自动生成表白程序,自动表白程序">
-	<meta name="description" content="这是一个自动生成表白页面的程序，模版由jianghongfei.com.cn原创，麦葱(www.yuxiaoxi.com)做二次开发，仅限娱乐，不得用于商业用途">
+	<meta name="description" content="这是一个自动生成表白页面的程序，模版由jianghongfei.com.cn原创，李昊做二次开发，仅限娱乐，不得用于商业用途">
 	<title>我们的故事</title>
 	<link rel="stylesheet" href="all.min.css" >
 </head>
@@ -298,7 +298,7 @@
 	<script src="all.min.js" ></script>
 	<script src="love.min.js" ></script>
 	<div class="mPower"><span id="on" title="点击暂停" style=""></span><span id="off" title="点击播放"  style=""></span>
-     <span class="say"><a href="index3.html"  style="text-decoration:none">点击>>>>其实，我一直都在你身后，就差你一个回头。</a></span><br /><br />
+     <span class="say"><a href="index3.html"  style="text-decoration:none">点击>>其实，我一直都在你身后，就差你一个回头。</a></span><br /><br />
     </div>
 
 	
