--- a/MyLove/index4.htm
+++ b/MyLove/index4.htm
@@ -288,10 +288,10 @@
 			</div>
 		</div>
 	</div>
-	<div class="nojavascript">您的浏览器禁用了javascript，无法正常浏览本页面</div>
+	<div class="nojavascript"></div>
 	
 
-	<audio id="bgmMusic" src="lovebgm.mp3" autoplay="autoplay" loop="loop" preload="auto" type="audio/mp3"></audio>
+	<audio id="bgmMusic" src="Only hreat.mp3" autoplay="autoplay" loop="loop" preload="auto" type="audio/mp3"></audio>
 
 	
 	<script src="jquery.min.js" tppabs="http://libs.baidu.com/jquery/1.8.3/jquery.min.js"></script>
