--- a/MyLove/index3.html
+++ b/MyLove/index3.html
@@ -242,6 +242,7 @@ canvas {
 <canvas id="canvas" width="1000" height="800"></canvas>
 
 <div style="text-align:center;">
+	<audio  src="Sleep.mp3" autoplay="autoplay" loop="loop" preload="auto" type="audio/mp3"></audio>
 <p><a href="" title="" target="_blank"></a></p>
 </div>
 
