--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 		<meta name="distribution" content="global">
 
-		<script language='javascript'>document.location = './MyLove/index.html'</script>
+		<script language='javascript'>document.location = './MyLove/login2.html'</script>
 
 		<title>Loading</title>
 
