--- a/MyLove/login2.html
+++ b/MyLove/login2.html
@@ -29,7 +29,7 @@
             {
             
                 window.location.href="index.html" ;
-                return true ;            
+                return fase ;            
         
             }
             else
