--- a/MyLove/login2.html
+++ b/MyLove/login2.html
@@ -21,7 +21,7 @@
         <![endif]-->
         <script language="javascript" type="text/javascript">
        
-       function check_login()
+      function check_login()
         {
         	var user=document.getElementById("username1").value;
         	var pwd=document.getElementById("password1").value;
@@ -48,9 +48,10 @@
 
             <h1>登录(Login)</h1>
             <form action="" method="">
-                <input type="text" name="username" class="username" value="" placeholder="请输入您的用户名！">
-                <input type="password" name="password" class="password" value="" placeholder="请输入您的用户密码！">
+                <input type="text"  id="username1" class="username" value="" placeholder="请输入您的用户名！">
+                <input type="password" id="password1" class="password" value="" placeholder="请输入您的用户密码！">
                 
+               <!-- <button type="submit" class="submit_button" onclick="check_login()">登录</button>-->
                <button onclick="check_login()" class="submit_button" type="button" value="登录" name="Button1">登录</button>
                 <div class="error"><span>+</span></div>
             </form>
