--- a/MyLove/index4.htm
+++ b/MyLove/index4.htm
@@ -298,7 +298,7 @@
 	<script src="all.min.js" ></script>
 	<script src="love.min.js" ></script>
 	<div class="mPower"><span id="on" title="点击暂停" style=""></span><span id="off" title="点击播放"  style=""></span>
-     <span class="say"><a href="index3.html"  style="text-decoration:none">点击>>其实，我一直都在你身后，就差你一个回头。</a></span><br /><br />
+     <span class="say"><a href="page.html"  style="text-decoration:none">点击>>>这是一本关于你的书。</a></span><br /><br />
     </div>
 
 	
