--- a/MyLove/login2.html
+++ b/MyLove/login2.html
@@ -25,7 +25,7 @@
         {
         	var user=document.getElementById("username1").value;
         	var pwd=document.getElementById("password1").value;
-            if(user=="love"&&pwd=="123")
+            if(user=="mylove"&&pwd=="123")
             {
             
                 window.location.href="index.html" ;
